--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -2,22 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "09a4db6a",
+   "execution_count": 17,
+   "id": "6fde2e87",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'g_key' from 'config' (C:\\Users\\corte\\Class\\Hot_World_Map\\config.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_14244\\3082428167.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m# Import the API key.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[1;32mfrom\u001b[0m \u001b[0mconfig\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mg_key\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'g_key' from 'config' (C:\\Users\\corte\\Class\\Hot_World_Map\\config.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import the dependencies.\n",
     "import pandas as pd\n",
@@ -29,15 +17,227 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c49eb13e",
+   "execution_count": 18,
+   "id": "d945ed98",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Baykit</td>\n",
+       "      <td>11</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>2022-07-20 19:50:34</td>\n",
+       "      <td>96</td>\n",
+       "      <td>61.6700</td>\n",
+       "      <td>96.3700</td>\n",
+       "      <td>51.24</td>\n",
+       "      <td>1.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Kodiak</td>\n",
+       "      <td>100</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2022-07-20 19:50:35</td>\n",
+       "      <td>76</td>\n",
+       "      <td>57.7900</td>\n",
+       "      <td>-152.4072</td>\n",
+       "      <td>54.91</td>\n",
+       "      <td>4.61</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Hobart</td>\n",
+       "      <td>1</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2022-07-20 19:50:35</td>\n",
+       "      <td>94</td>\n",
+       "      <td>-42.8794</td>\n",
+       "      <td>147.3294</td>\n",
+       "      <td>34.27</td>\n",
+       "      <td>5.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Saldanha</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>2022-07-20 19:50:36</td>\n",
+       "      <td>62</td>\n",
+       "      <td>-33.0117</td>\n",
+       "      <td>17.9442</td>\n",
+       "      <td>46.45</td>\n",
+       "      <td>12.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Sungairaya</td>\n",
+       "      <td>9</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>2022-07-20 19:50:36</td>\n",
+       "      <td>88</td>\n",
+       "      <td>0.7000</td>\n",
+       "      <td>108.9000</td>\n",
+       "      <td>78.60</td>\n",
+       "      <td>0.38</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID        City  Cloudiness Country                 Date  Humidity  \\\n",
+       "0        0      Baykit          11      RU  2022-07-20 19:50:34        96   \n",
+       "1        1      Kodiak         100      US  2022-07-20 19:50:35        76   \n",
+       "2        2      Hobart           1      AU  2022-07-20 19:50:35        94   \n",
+       "3        3    Saldanha           0      ZA  2022-07-20 19:50:36        62   \n",
+       "4        4  Sungairaya           9      ID  2022-07-20 19:50:36        88   \n",
+       "\n",
+       "       Lat       Lng  Max Temp  Wind Speed  \n",
+       "0  61.6700   96.3700     51.24        1.83  \n",
+       "1  57.7900 -152.4072     54.91        4.61  \n",
+       "2 -42.8794  147.3294     34.27        5.75  \n",
+       "3 -33.0117   17.9442     46.45       12.68  \n",
+       "4   0.7000  108.9000     78.60        0.38  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Store the CSV you saved created in part one into a DataFrame.\n",
     "city_data_df = pd.read_csv(\"weather_data/cities.csv\")\n",
     "city_data_df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "03d9fc62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "City_ID         int64\n",
+       "City           object\n",
+       "Cloudiness      int64\n",
+       "Country        object\n",
+       "Date           object\n",
+       "Humidity        int64\n",
+       "Lat           float64\n",
+       "Lng           float64\n",
+       "Max Temp      float64\n",
+       "Wind Speed    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#get the data types\n",
+    "city_data_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "a1e62462",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Configure gmaps to use your Google API key.\n",
+    "gmaps.configure(api_key=g_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e8d68dd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "063e3e1b24724efeaca7a05a191fcb5d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Heatmap of temperature\n",
+    "# Get the latitude and longitude.\n",
+    "locations = city_data_df[[\"Lat\", \"Lng\"]]\n",
+    "# Get the maximum temperature.\n",
+    "max_temp = city_data_df[\"Max Temp\"]\n",
+    "# Assign the figure variable.\n",
+    "fig = gmaps.figure()\n",
+    "# Assign the heatmap variable.\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=max_temp)\n",
+    "# Add the heatmap layer.\n",
+    "fig.add_layer(heat_layer)\n",
+    "# Call the figure to plot the data.\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d538327",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
